# invoice

./: .gitignore  README.md  docker-compose.yml
.commandcode/design/: review-report.html
.github/workflows/: ci-cd.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: create_tables.py  main.py
backend/app/api/v1/: auth.py  clients.py  dashboard.py  exports.py  invoices.py  payments.py  uploads.py
backend/app/bot/: __init__.py  telegram_bot.py
backend/app/core/: config.py  database.py  dependencies.py  media.py  security.py
backend/app/models/: __init__.py  client.py  invoice.py  invoice_status_history.py  payment.py  user.py
backend/app/schemas/: auth.py  client.py  invoice.py  payment.py
backend/app/services/: auth_service.py  client_service.py  dashboard_service.py  export_service.py  file_service.py  invoice_service.py  invoice_status_service.py  notification_service.py  payment_service.py  render_service.py
backend/app/templates/: invoice.html
backend/app/utils/: money.py
backend/scripts/: check_backend.py
backend/tests/: test_app.py  test_services.py
deploy/: DEPLOYMENT.md
deploy/nginx/: invoice.conf
deploy/scripts/: bootstrap_server.sh  ci_backend.sh  ci_frontend.sh  deploy_remote.sh  deploy_vps.sh
deploy/systemd/: invoice-backend.service  invoice-frontend.service  invoice-telegram-bot.service
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ExportButtons.tsx  (+3 more)
scripts/: smoke_test.sh
(+39 files in other folders)
