[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.16.5",
    "email-validator==2.3.0",
    "fastapi==0.116.1",
    "jinja2==3.1.6",
    "playwright==1.55.0",
    "psycopg2-binary==2.9.10",
    "pydantic[email]==2.11.7",
    "pydantic-settings==2.10.1",
    "python-multipart==0.0.20",
    "python-telegram-bot==21.10",
    "sqlalchemy==2.0.43",
    "uvicorn[standard]==0.35.0",
    "weasyprint==66.0",
]
